--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <script src="script.js" charset="utf-8"></script>
   <footer>
-    Made with ❤️ in London.
+    This is Footer.
   </footer>
 </body>
 
